--- a/style.css
+++ b/style.css
@@ -1,11 +1,105 @@
-*
-*::before,
-*::after{
-    margin:0;
-    padding:0;
-    box-sizing: inherit;
+* *::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-html{
-    box-sizing: border-box;
+html {
+  box-sizing: border-box;
+}
+
+
+
+header{
+    margin-left: 4rem;
+    margin-right: 4rem;
+    margin-bottom: 1rem;
+}
+
+nav{
+    display: flex;
+    flex-direction: row;
+    width:100%;
+    justify-content: space-between;
+    border-bottom: 3px solid black;
+
+}
+
+ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding:0;
+}
+li{
+    margin-right: .8rem;
+}
+
+.logo{
+    width:1.5rem;
+}
+
+
+
+/* search field */
+.search_container{
+    display: flex;
+    flex-direction: row;
+    margin-top: 1rem;
+}
+/* .search_icon {
+  width: 1rem;
+  height: auto;
+} */
+
+.form {
+    display: flex;
+    flex-direction: row;
+  }
+  .search-field {
+    width:100%;
+    height:56%;
+    /* padding: 10px 35px 10px 15px; */
+    border: 1px solid black;
+    outline: none;
+  }
+  
+  .search-button {
+    background: transparent;
+    border: none;
+    outline: none;
+    margin-left: -33px;
+    height:30%;
+  }
+  
+  .search-button img {
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
+  }
+
+
+  .center_logo_div{
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
+      margin-top: .4rem;
+}
+
+.cart{
+    margin-left: 2rem;
+}
+.main_image{
+    width:100%;
+    background-color:black;
+    width:100%;
+    /* linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 30%, rgba(255,255,255,0) 70%, rgba(0,0,0,1) 100%); */
+}
+img{
+   display: grid;
+   justify-content: center;
+   width:80%;
+   margin: auto;
 }
