--- a/style.css
+++ b/style.css
@@ -9,97 +9,112 @@ html {
   box-sizing: border-box;
 }
 
-
-
-header{
-    margin-left: 4rem;
-    margin-right: 4rem;
-    margin-bottom: 1rem;
+header {
+  margin-left: 4rem;
+  margin-right: 4rem;
+  margin-bottom: 1rem;
 }
 
-nav{
-    display: flex;
-    flex-direction: row;
-    width:100%;
-    justify-content: space-between;
-    border-bottom: 3px solid black;
-
+nav {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  border-bottom: 3px solid black;
 }
 
-ul{
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding:0;
-}
-li{
-    margin-right: .8rem;
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 0;
 }
 
-.logo{
-    width:1.5rem;
+.flex_div {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 0;
+}
+li {
+  margin-right: 0.8rem;
 }
 
-
-
-/* search field */
-.search_container{
-    display: flex;
-    flex-direction: row;
-    margin-top: 1rem;
+.logo {
+  width: 1.7rem;
+  height: 1.8rem;
+  margin-top: .5rem;
 }
-/* .search_icon {
-  width: 1rem;
-  height: auto;
-} */
+
+.search_container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 1rem;
+  width: 30%;
+  justify-content: flex-end;
+}
 
 .form {
-    display: flex;
-    flex-direction: row;
-  }
-  .search-field {
-    width:100%;
-    height:56%;
-    /* padding: 10px 35px 10px 15px; */
-    border: 1px solid black;
-    outline: none;
-  }
-  
-  .search-button {
-    background: transparent;
-    border: none;
-    outline: none;
-    margin-left: -33px;
-    height:30%;
-  }
-  
-  .search-button img {
-    width: 20px;
-    height: 20px;
-    object-fit: cover;
-  }
-
-
-  .center_logo_div{
-      display: flex;
-      flex-direction: row;
-      align-items: baseline;
-      margin-top: .4rem;
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+}
+.search-field {
+  width: 100%;
+  height: 56%;
+  border: 1px solid black;
+  outline: none;
 }
 
-.cart{
-    margin-left: 2rem;
+.search-button {
+  background: transparent;
+  border: none;
+  outline: none;
+  margin-left: -33px;
+  height: 30%;
 }
-.main_image{
+
+.search-button img {
+  width: 20px;
+  height: 20px;
+  object-fit: cover;
+}
+
+.center_logo_div {
+  display: flex;
+  flex-direction: row;
+  margin-top: 0.4rem;
+}
+
+.cart {
+  margin-left: 2rem;
+}
+
+.bg-image {
+  background-image: url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
+  justify-content: center;
+  width: 80%;
+  margin: auto; 
+}
+
+ .hero{
+     width:100%;
+     height:400px;
+     background-image: url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
+     background-size: 80%;
+     background-repeat: no-repeat;
+     background-position: center;
+     position: relative;
+    
+ }
+
+ .gradient-bg{
+    background-image:linear-gradient(90deg, rgba(0,0,0,1) 20%, rgba(255,255,255,0) 30%, rgba(255,255,255,0) 70%, rgba(0,0,0,1) 100%);
     width:100%;
-    background-color:black;
-    width:100%;
-    /* linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 30%, rgba(255,255,255,0) 70%, rgba(0,0,0,1) 100%); */
-}
-img{
-   display: grid;
-   justify-content: center;
-   width:80%;
-   margin: auto;
-}
+    height:100%;
+ }
+
+
+
