--- a/style.css
+++ b/style.css
@@ -5,8 +5,18 @@
   box-sizing: inherit;
 }
 
+*{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 html {
   box-sizing: border-box;
+}
+
+.logo-font{
+  letter-spacing: .3rem;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 header {
@@ -41,11 +51,21 @@ ul {
 li {
   margin-right: 0.8rem;
 }
+ul > a{
+text-decoration: none;
+color:black;
+}
+ul > a:hover{
+text-decoration: none;
+color:rgb(191,118,49);
+}
+
 
 .logo {
   width: 1.7rem;
   height: 1.8rem;
-  margin-top: .5rem;
+  margin-top: 1.1rem;
+  margin-right: .3rem;
 }
 
 .search_container {
@@ -92,30 +112,26 @@ li {
   margin-left: 2rem;
 }
 
-.bg-image {
-  background-image: url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
-  justify-content: center;
-  width: 80%;
-  margin: auto; 
-  min-width: auto;
-}
-
  .hero{
-     width:100%;
-     height:400px;
-     background-image: url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
-     background-size: 80%;
-     background-repeat: no-repeat;
-     background-position: center;
+     height:35vh; 
+     background-color: black;
+     padding:4rem;
+     background-image: linear-gradient(90deg, rgba(0,0,0,1) -30%, rgba(0,0,0,0) 30%, rgba(0,0,0,1) 200%),
+     url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
+     object-fit: cover;
      position: relative;
-    
+     background-position: center;
+     background-size: 60%;
+     background-repeat: no-repeat;
  }
 
- .gradient-bg{
-    background-image:linear-gradient(90deg, rgba(0,0,0,1) 20%, rgba(255,255,255,0) 30%, rgba(255,255,255,0) 70%, rgba(0,0,0,1) 100%);
-    width:100%;
-    height:100%;
- }
+.hero-title-one{
+  color:rgb(248, 248, 248)
+}
+.hero-title-two{
+  color:rgb(248, 248, 248);
+  text-align: end;
+}
 
 
 
