--- a/style.css
+++ b/style.css
@@ -132,6 +132,94 @@ color:rgb(191,118,49);
   color:rgb(248, 248, 248);
   text-align: end;
 }
+#about {
+  width: 50%;
+  border-bottom: 2px solid black;
+  margin-left: 20px;
+
+}
+
+  .about_text{
+    margin-left: 20px;
+}
+.about_pic {
+  margin-left: 20px;
+  width: 10rem;
+  height: 20rem;
+}
+.about_pic2 {
+  margin-left: 20px;
+  width: 10rem;
+  height: 20rem;
+  float: right;
+}
+
+#products {
+  width:50%;
+  margin-left:20px;
+  border-bottom: 2px solid black;
+
+}
+]
+.card_container {
+  display:grid;
+  grid-template-areas: "one two three"
+                        "four five six"
+                        "seven eight nine"
+  
+  
+}
+.card {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 
 
+.card_button {
+  width: auto;
+}
+}
+.card_text {
+  height: 50%;
+  width: 50%;
 
+}
+.card_title {
+  height: auto;
+  width: auto;
+
+}
+.card_image {
+  height: 5rem;
+  width: 5rem;
+ 
+}
+
+.one {
+  grid-area: "one"
+}
+.two {
+  grid-area: "two"
+}
+.three{
+  grid-area: "three"
+}
+.four {
+  grid-area: "four"
+}
+.five {
+  grid-area: "five"
+}
+.six {
+  grid-area: "six"
+}
+.seven {
+  grid-area: "seven"
+}
+.eight {
+  grid-area: "eight"
+}
+.nine {
+  grid-area: "nine"
+}
