--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ nav {
   width: 100%;
   justify-content: space-between;
   border-bottom: 3px solid black;
+  font-size:1.2rem;
 }
 
 ul {
@@ -72,8 +73,8 @@ color:rgb(191,118,49);
   display: flex;
   flex-direction: row;
   margin-top: 1rem;
-  width: 30%;
-  justify-content: flex-end;
+  width: 20rem;
+  justify-content:space-between;
 }
 
 .form {
@@ -113,10 +114,10 @@ color:rgb(191,118,49);
 }
 
  .hero{
-     height:35vh; 
+     height:55vh; 
      background-color: black;
      padding:4rem;
-     background-image: linear-gradient(90deg, rgba(0,0,0,1) -30%, rgba(0,0,0,0) 30%, rgba(0,0,0,1) 200%),
+     background-image: linear-gradient(90deg, rgba(0,0,0,1) 1%, rgba(0,0,0,0) 30%, rgba(0,0,0,1) 116%),
      url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
      object-fit: cover;
      position: relative;
@@ -126,11 +127,17 @@ color:rgb(191,118,49);
  }
 
 .hero-title-one{
-  color:rgb(248, 248, 248)
+  color:rgb(248, 248, 248);
+  position: absolute;
+  font-size: 4rem;
+  left: 20rem;
 }
 .hero-title-two{
   color:rgb(248, 248, 248);
-  text-align: end;
+  position: absolute;
+  right: 23rem;
+  bottom: 10rem;
+  font-size: 4rem;
 }
 #about {
   width: 50%;
@@ -160,7 +167,7 @@ color:rgb(191,118,49);
   border-bottom: 2px solid black;
 
 }
-]
+
 .card_container {
   display:grid;
   grid-template-areas: "one two three"
