--- a/style.css
+++ b/style.css
@@ -12,7 +12,15 @@
 html {
   box-sizing: border-box;
 }
-
+button {
+  width: 5rem;
+  height: 2.5rem;
+  align-self: flex-end;
+  font-size: 10px;
+  border-radius: 4px;
+  background-color: orangered;
+  justify-self: baseline
+}
 .logo-font{
   letter-spacing: .3rem;
   font-size: 1.2rem;
@@ -62,10 +70,12 @@ color:rgb(191,118,49);
 
 
 .logo {
+  
   width: 1.7rem;
   height: 1.8rem;
   margin-top: 1.1rem;
   margin-right: .3rem;
+ 
 }
 
 .search_container {
@@ -140,17 +150,25 @@ color:rgb(191,118,49);
 }
 
   .about_text{
+    position: relative;
     margin-left: 20px;
+   
+
+    
 }
+
+
 .about_pic {
   margin-left: 20px;
+  margin-right: 10px;
   width: 10rem;
   height: 20rem;
+  float: left;
 }
 .about_pic2 {
   margin-left: 20px;
-  width: 10rem;
-  height: 20rem;
+  width: 25rem;
+  height: 25rem;
   float: right;
 }
 
@@ -160,62 +178,102 @@ color:rgb(191,118,49);
   border-bottom: 2px solid black;
 
 }
-]
+
 .card_container {
-  display:grid;
-  grid-template-areas: "one two three"
-                        "four five six"
-                        "seven eight nine"
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   
   
 }
 .card {
-  margin-left: 20px;
+  margin: 2rem;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  width: 25%;
+  height: auto;
+  border: 1px solid whitesmoke;
 
 
-.card_button {
-  width: auto;
 }
-}
+ .middle_text {
+   
+ }
 .card_text {
-  height: 50%;
-  width: 50%;
-
+ height: auto;
+ width: 100%;
+ font-family:Georgia, 'Times New Roman', Times, serif
+ 
 }
 .card_title {
   height: auto;
   width: auto;
 
 }
+h3{
+  display: inline;
+  
+ 
+  
+}
 .card_image {
-  height: 5rem;
-  width: 5rem;
+  height: 200px;
+  width: 100%;
  
 }
 
+.bottom_page {
+  margin-top: 2rem;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 5rem;
+  align-self: baseline;
+  width: 100%;
+  background-color: orangered;
+}
+
+.top_center {
+  justify-self: center;
+  align-self: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.top_right {
+  align-self: flex-end;
+}
+#contact {
+  width: 50%;
+  border-bottom: 2px solid black;
+  margin-left: 20px;
+}
+
+/*
 .one {
-  grid-area: "one"
+  grid-area: "one";
 }
 .two {
-  grid-area: "two"
+  grid-area: "two";
 }
 .three{
-  grid-area: "three"
+  grid-area: "three";
 }
 .four {
-  grid-area: "four"
+  grid-area: "four";
 }
 .five {
-  grid-area: "five"
+  grid-area: "five";
 }
 .six {
-  grid-area: "six"
+  grid-area: "six";
 }
 .seven {
-  grid-area: "seven"
+  grid-area: "seven";
 }
 .eight {
   grid-area: "eight"
