--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@
 *{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
+.search_icon {
+  position: relative;
+  right: 10px;
+  top: -30px;
+}
 html {
   box-sizing: border-box;
 }
@@ -123,23 +127,23 @@ color:rgb(191,118,49);
   margin-left: 2rem;
 }
 
- .hero{
-     height:55vh; 
-     background-color: black;
-     padding:4rem;
-     background-image: linear-gradient(90deg, rgba(0,0,0,1) 1%, rgba(0,0,0,0) 30%, rgba(0,0,0,1) 116%),
-     url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
-     object-fit: cover;
-     position: relative;
-     background-position: center;
-     background-size: 60%;
-     background-repeat: no-repeat;
- }
+.hero{
+    height:55vh; 
+    background-color: black;
+    padding:4rem;
+    background-image: linear-gradient(90deg, rgba(0,0,0,1) 1%, rgba(0,0,0,0) 30%, rgba(0,0,0,1) 116%),
+    url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
+    object-fit: cover;
+    position: relative;
+    background-position: center;
+    background-size: 60%;
+    background-repeat: no-repeat;
+}
 
 .hero-title-one{
   color:rgb(248, 248, 248);
   position: absolute;
-  font-size: 4rem;
+  font-size: 2rem;
   left: 20rem;
 }
 .hero-title-two{
@@ -147,7 +151,7 @@ color:rgb(191,118,49);
   position: absolute;
   right: 23rem;
   bottom: 10rem;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 #about {
   width: 50%;
@@ -156,9 +160,9 @@ color:rgb(191,118,49);
 
 }
 
-  .about_text{
-    position: relative;
-    margin-left: 20px;
+.about_text{
+  position: relative;
+  margin-left: 20px;
    
 
     
